# 0.5.0.0

## Upgrade Instructions
 * [Test-WindowsFeature](http://get-carbon.org/help/Test-WindowsFeature.html) tests if a Windows feature exists, instead of if it is installed.  To maintain backwards-compatibility, add the new `Installed` switch.
 * Rename usages of `Install-WindowsFeatures` with [Install-WindowsFeature](http://get-carbon.org/help/Install-WindowsFeature.html).  Also, rename usages of the `Features` parameter to `Name`.
 * Rename usages of `Uninstall-WindowsFeatures` with [Uninstall-WindowsFeature](http://get-carbon.org/help/Install-WindowsFeature.html).  Also, rename usages of the `Features` parameter to `Name`.
 * Replace usages of `Install-WindowsFeatureIis` with `[Install-WindowsFeature](http://get-carbon.org/help/Install-WindowsFeature.html) -Iis`.  You can use the `IisHttpRedirection` switch to install IIS HTTP redirection.
 * Replace usages of `Install-WindowsFeatureMsmq` with `[Install-WindowsFeature](http://get-carbon.org/help/Install-WindowsFeature.html) -Msmq`.  You can use the `MsmqHttpSupport` and `MsmqActiveDirectoryIntegration`.
 * Rename usages of `Install-Share` with `[Install-SmbShare](Install-SmbShare](http://get-carbon.org/help/Install-SmbShare.html)`.  Also, replace usages of the old `Permissions` parameter with the new `FullAccess`, `ChangeAccess`, and `ReadAccess` parameters.  Previously, to set share permissions, you passed in specially-formatted values to the `Permission` parameter, e.g. `"MyGroup,FULL","MyOtherGroup,READ"`.  Now, just pass a list of identity name(s) to the `FullAccess`, `ChangeAccess`, or `ReadAccess` parameters to grant those identies full, change, or read access, e.g. `-FullAccess MyGroup -ReadAccess MyOtherGroup`.