@@ -14,7 +14,7 @@
 
 function Setup
 {
-    Import-Module (Join-Path $TestDir ..\..\Carbon -Resolve) -Force
+    & (Join-Path $TestDir ..\..\Carbon\Import-Carbon.ps1 -Resolve)
 }
 
 function TearDown
@@ -25,21 +25,38 @@ function TearDown
 function Test-ShouldGetCanonicalCaseForDirectory
 {
     $currentDir = (Resolve-Path '.').Path
-    $canonicalCase = Get-PathCanonicalCase ($currentDir.ToUpper())
+    $canonicalCase = Resolve-PathCase ($currentDir.ToUpper())
     Assert-True ($currentDir -ceq $canonicalCase)
 }
 
 function Test-ShouldGetCanonicalCaseForFile
 {
-    $currentFile = Join-Path $TestDir 'Test-GetPathCanonicalCase.ps1' -Resolve
-    $canonicalCase = Get-PathCanonicalCase -Path ($currentFile.ToUpper())
+    $currentFile = Join-Path $TestDir 'Test-ResolvePathCase.ps1' -Resolve
+    $canonicalCase = Resolve-PathCase -Path ($currentFile.ToUpper())
     Assert-True ($currentFile -ceq $canonicalCase)
 }
 
 function Test-ShouldNotGetCaseForFileThatDoesNotExist
 {
     $error.Clear()
-    $result = Get-PathCanonicalCase 'C:\I\Do\Not\Exist' -ErrorAction SilentlyContinue
+    $result = Resolve-PathCase 'C:\I\Do\Not\Exist' -ErrorAction SilentlyContinue
     Assert-False $result
     Assert-Equal 1 $error.Count
+}
+
+function Test-ShouldAcceptPipelineInput
+{
+    $gotSomething = $false
+    Get-ChildItem 'C:\WINDOWS' | 
+        ForEach-Object { 
+            Assert-True ($_.FullName.StartsWith( 'C:\WINDOWS' ) )
+            $_
+        } |
+        Resolve-PathCase | 
+        ForEach-Object { 
+            $gotSomething = $true
+            Assert-True ( $_.StartsWith( 'C:\Windows' ) )
+        }
+    Assert-True $gotSomething
+    
 }
